# marin-style

./: .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml  report-failure-smoke.yaml
actions/classify-claude/: action.yaml  claude_runner.py
actions/consult-agent/: action.yaml  classify_result.py
actions/notify-slack/: action.yaml
actions/prose-cleanup/: action.yaml
actions/report-failure/: action.yaml
src/marin_style/: cli.py  complexity.py  lint_review.py  precommit.py  vendor.py
src/marin_style/assets/agents/: AGENTS-core.md  TESTING-core.md
src/marin_style/assets/skills/commit/: SKILL.md
src/marin_style/assets/skills/debug/: SKILL.md
src/marin_style/assets/skills/file-issue/: SKILL.md
src/marin_style/assets/skills/write-tests/: SKILL.md
src/marin_style/assets/skills/writing-style/: SKILL.md  ai-writing-donts.md  blog-posts.md  discord.md  issues.md  pull-requests.md  reference-docs.md  reports.md  tutorials.md
src/marin_style/assets/templates/: e2e-ci.yaml  e2e-nightly.yaml  pre-commit.py  prose-cleanup.yaml  setup-github-wif.sh
src/marin_style/lint/: complexity.md  cruft.md  interfaces.md  meta.md  prose.md  robustness.md  shared.md
